# Umkehrwalze_Cassel

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.agents/skills/ci-test-design/: SKILL.md
.agents/skills/revprint/: SKILL.md
.github/workflows/: ci.yml
docs/: cloud_offload_contract.md  model_dataset_spec.md
docs/samples/: README.md
inputs/text_dense_8/: hessian_archive_export_2026-04-26.json  selected_text_dense_8.txt
src/revprint/: __init__.py  __main__.py  adaptive_clean.py  batch_pipeline.py  cli.py  cloud_contract.py  cloud_manifest.py  cloud_runtime.py  config.py  content_mask.py  corpus_stats.py  crease_refine.py  dewarp.py  edge_reconstruction.py  edge_refine.py  ghost_cross_page.py  ghost_suppression.py  htr_adapter.py  htr_templates.py  image_processing.py  io_scan.py  job_store.py  language_evidence.py  line_artifact_refine.py  line_dewarp.py  ocr_extract.py  ocr_reconstruction_hints.py  page_interactions.py  page_model.py  pdf_export.py  pdf_fonts.py  phrase_memory.py  pilot_bundle.py  plausibility.py  project_store.py  proof.py  proof_review.py  review_store.py  speckle_refine.py  spine_flatten.py  (+4 more)
tests/: test_adaptive_clean.py  test_cli.py  test_cloud_contract.py  test_cloud_runtime.py  test_config.py  test_content_mask.py  test_corpus_stats.py  test_crease_refine.py  test_dewarp.py  test_edge_reconstruction.py  test_entrypoint.py  test_ghost_cross_page.py  test_ghost_suppression.py  test_htr_adapter.py  test_image_processing_bbox.py  test_io_scan.py  test_job_store.py  test_language_evidence.py  test_line_artifact_refine.py  test_line_dewarp.py  test_page_interactions.py  test_page_interactions_decision.py  test_page_model.py  test_pdf_export.py  test_phrase_memory.py  test_pilot_bundle.py  test_project_store.py  test_proof_pipeline.py  test_proof_review.py  test_review_store.py  test_speckle_refine.py  test_spine_flatten.py  test_stamp_suppress.py  test_translation_google.py  test_web.py
