[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revprint"
version = "0.1.0"
description = "Manuscript image pipeline: scan discovery, job tracking, print outputs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
    "reportlab>=4.0.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]
ocr = [
    "pytesseract>=0.3.10",
]

[project.scripts]
revprint = "revprint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/revprint"]

[tool.hatch.build.targets.sdist]
include = ["src/revprint", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/revprint --cov-report=term-missing --cov-fail-under=70"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
